# mediapipe_gesture_recognition

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
CSV files/: Tanguy.csv  Test.csv  Testing.csv  Tutoriel.csv
PKL files/: TRobot.pkl  Test.pkl  Testing.pkl  Tutoriel.pkl  testrobot.pkl  tgy.pkl
TXT file/: projectname.txt
TXT file/Position_Name/: Position_Name_TRobot.txt  Position_Name_Test.txt  Position_Name_Testing.txt  Position_Name_Tutoriel.txt  Position_Name_testrobot.txt
TXT file/Solution_Name/: Solution_Testing.txt  Solution_Tutoriel.txt
config/: config.py  config.yaml  stream_node.yaml
database/2D_Gestures/Left/: Militar salutation.pkl  ok.pkl  oki.pkl  stop.pkl
database/2D_Gestures/RightLeft/: Thumb up.pkl  W.pkl  trained_model.pkl
database/3D_Gestures/DAMSO/16/: 25.npy
database/3D_Gestures/DAMSO/21/: 22.npy
database/3D_Gestures/DAMSO/24/: 23.npy
database/3D_Gestures/DAMSO/26/: 23.npy
database/3D_Gestures/DAMSO/27/: 10.npy
database/3D_Gestures/DAMSO/29/: 2.npy
database/3D_Gestures/DAMSO/7/: 10.npy
database/3D_Gestures/DAMSO/8/: 22.npy  8.npy
database/3D_Gestures/DAMSO/9/: 10.npy
database/3D_Gestures/Hello/0/: 0.npy  11.npy
database/3D_Gestures/Hello/1/: 0.npy  21.npy  24.npy
database/3D_Gestures/Hello/2/: 1.npy  29.npy  4.npy  6.npy
database/3D_Gestures/Hello/3/: 1.npy  29.npy
database/3D_Gestures/Hello/4/: 29.npy
database/3D_Gestures/Left/: trained_model.pkl
database/3D_Gestures/OK/1/: 17.npy
database/3D_Gestures/OK/12/: 17.npy
database/3D_Gestures/OK/17/: 5.npy
database/3D_Gestures/OK/2/: 10.npy
database/3D_Gestures/OK/25/: 21.npy
database/3D_Gestures/OK/7/: 14.npy
database/3D_Gestures/RightLeft/: trained_model.pkl
database/3D_Gestures/RightLeftPose/: trained_model.pkl  trained_model.pth
database/3D_Gestures/RightPoseFace/: trained_model.pkl
database/3D_Gestures/Stop/1/: 14.npy
database/Gestures/Face/: trained_model.pkl
database/Gestures/Left/: Thumb up.pkl  close.pkl  large.pkl  trained_model.pkl
database/Gestures/Right/: close.pkl  stop.pkl  trained_model.pkl
database/Gestures/RightFace/: trained_model.pkl
database/Gestures/RightLeft/: Clos.pkl  OK.pkl  Thumb up.pkl  trained_model.pkl
database/Gestures/RightLeftPose/: trained_model.pkl
dataset/: Gesture To Record.md  Gesture to record
dataset/Jester Dataset/Labels/: Sorted_Total.csv
dataset/Labels/: Total.csv
doc/Mediapipe/: MediaPipe Installation.md
launch/: D_recognition_node.launch  D_stream_node.launch  Publisher.launch  action_recognition_node.launch  action_training_node.launch  gesture_recognition_node.launch  process_dataset.launch  process_dataset_node.launch  process_dataset_node.launch.py  recognition_node.launch  recognition_node.launch.py  stream_node.launch  stream_node.launch.py  training_node.launch  video_node.launch  video_training_node.launch
model/3D_Gestures/RightLeftPose/: model.pth  model_parameters.yaml
model/RightLeftPose/: model_parameters.yaml
msg/: Hand.msg  Holistic.msg  Keypoint.msg  Skeleton.msg  hand.msg  left_hand.msg
scripts/: 2D_recognition_node.py  2D_training_node.py  3D_recognition_node.py  3D_test.py  3D_training_node.py  D_mediapipe_stream_node.py  PY_recognition_node.py  PY_train_pickle_node.py  Publisher.py  Simulation.py  TF_recognition_node.py  TF_train_pickle_node.py  Test Pickle.py  Utils.py  action_recognition_node.py  action_recognition_training_node.py  action_test.py  gesture_recognition_node.py  gesture_recognition_training_node.py  mediapipe_stream_node.py  mediapipe_stream_node_test.py  mediapipe_video_node.py  mediapipe_video_node_STOP.py  modified_mediapipe_stream_node.py  new_mediapipe_video_node.py  old_mediapipe_video_node.py  process_dataset_node.py  pytorch_recognition_node.py  pytorch_training_node.py  pytorch_videotraining_node.py  recognition_node.py  stream_node.py  tensorflow_recognition_node.py  tensorflow_training_node.py  tensorflow_videotraining_node.py  test.py  training_node.py  training_node_working_save.py  trainning_node_pandas_save.py  xy_recognition_node.py  (+4 more)
scripts/Justin's Nodes/: Publisher.py  Robot_Class.py  Subscriber.py
scripts/dataset_creator/: video_register.py
scripts/dataset_creator/utilities/: Utils.py
scripts/dataset_utilities/: process_dataset_node.py  video_recorder.py  video_register.py
scripts/dataset_utilities/jester_dataset/: dataset_converter.py
scripts/dataset_utilities/utilities/: flip_zoom_dataset.py  zero_padding.py
scripts/gesture_2D/: recognition_node_2D.py  training_node_2D.py
scripts/lightning_logs/version_0/: events.out.tfevents.1678873313.Ubuntu20.66596.0
scripts/lightning_logs/version_1/: events.out.tfevents.1678876317.Ubuntu20.71674.0
scripts/lightning_logs/version_10/: events.out.tfevents.1683106064.Ubuntu20.293069.0
scripts/lightning_logs/version_11/: events.out.tfevents.1683106372.Ubuntu20.301961.0
scripts/lightning_logs/version_12/: events.out.tfevents.1683152576.Ubuntu20.129423.0
scripts/lightning_logs/version_2/: events.out.tfevents.1678876500.Ubuntu20.74471.0
scripts/lightning_logs/version_3/: events.out.tfevents.1678877135.Ubuntu20.83156.0
scripts/lightning_logs/version_5/: events.out.tfevents.1679435181.Ubuntu20.117905.0
scripts/lightning_logs/version_6/: events.out.tfevents.1679435433.Ubuntu20.118354.0
scripts/lightning_logs/version_7/: events.out.tfevents.1679435998.Ubuntu20.119378.0
scripts/lightning_logs/version_9/: events.out.tfevents.1683101520.Ubuntu20.194488.0
scripts/point_at_utilities/: area_coordinates_recorder.py  point_area_node.py
scripts/raw_function/: 3Ditem_register.py  3Dpoint_node_area.py  TODO.txt  item_coordinates.csv
scripts/utils/: dataset_converter.py  lightning_utilities.py  mediapipe_types.py  process_dataset_node.py  utils.py
srv/: VideoSequence.srv
trained_models/: First try.pkl  trained_model.pkl
useful_scripts/: Converter_frametovideo.py  Duration.py  Pro_converter.py  appender.py  labeller.py  labellerFromVideo.py  prova.py  see_inside_npy_file.py  wifi.py  xy_training_node.py  zfill.py
(+2837 files in other folders)
